--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,8 +56,9 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\kure_hareket.cs" />
     <Compile Include="Assets\Scripts\yol_olustur.cs" />
+    <Compile Include="Assets\Scripts\kure_hareket.cs" />
+    <Compile Include="Assets\Scripts\Takipci_camera.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
